# assimpViewAndroid

./: .gitignore  README.md
app/: build.gradle
app/src/androidTest/java/com/test/assimpviewandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: modelAnimationTextured.vsh
app/src/main/cpp/: Animation.cpp  Animation.h  AnimationLoader.cpp  AnimationLoader.h  Animator.cpp  Animator.h  CMakeLists.txt  ModelObject.cpp  ModelObject.h  Utils.cpp  Utils.h  assimpDrawer.cpp  gestureClass.cpp  modelAssimp.cpp  modelAssimp.h  myGLCamera.cpp  myGLCamera.h  myGLFunctions.cpp  myGLFunctions.h  myGLM.h  myGLRenderer.cpp  myJNIHelper.h
app/src/main/java/com/test/assimpviewandroid/: GestureClass.java  MainActivity.java  TGLRenderer.java  TGLSurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/test/assimpviewandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
